--- a/index.html
+++ b/index.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sayf's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
 
-  <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images\Sayf_img.PNG" alt="Sayf profile picture"></td>
-        <td><h1>Sayf Khan</h1>
-        <p><em>Software Engineer at ZF Group</em></p>
-        <p>Full Stack Cloud Developer with experience in software development and project management
-           focused on creating cloud-based web applications.</p></td>
-      </tr>
-    </table>
+<head>
+  <meta charset="utf-8">
+  <title>Sayf Khan</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  <link rel="icon" href="images\Sayf_Circle.png">
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <div class="title-text">
+      <h1>I'm Sayf.</h1>
+      <h2>A Software Engineer.</h2>
+    </div>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="City" src="images\City.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images\Sayf_Circle.png" alt="Sayf-profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am a Cyber Security Software Engineer by Day and Full Stack Developer by Night</p>
+    </div>
     <hr>
-    <h3>Education</h3>
-    <td><h4>BEng Electrical and Electronic Engineering</h4></td>
-    <td>Graduated 2019</td>
-    <ul>
-      <li><strong>Grade:</strong> First with Honours, GPA - 3.75/4.0</li>
-      <li><strong>Award:</strong> The 2018 - 2019 Electrical, Electronic and Systems Engineering's “Member of the Year”</li>
-    </ul>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="https://media.giphy.com/media/836HiJc7pgzy8iNXCn/giphy.gif" alt="code-img">
+
+        <h3>Design & Development</h3>
+        <p>Full Stack Cloud Developer with experience in software development focused on creating cloud-based web applications.</p>
+
+      </div>
+      <div class="skill-row">
+        <img class="Leader-img" src="images\Leader.png" alt="chillies-img">
+
+        <h3>Project Management</h3>
+        <p>Experiance in project management in civil outreach projects to industrial software projects</p>
+
+      </div>
+      <div class="skill-row">
+        <img class="Mentor-img" src="images\joany-and-trooper-large.png" alt="chillies-img">
+
+        <h3>Mentoring</h3>
+        <p>My passion lies in helping others in developing their software skills.</p>
+
+      </div>
+    </div>
     <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2019 - Present</td>
-          <td>Product Software Engineer</td>
-        </tr>
-        <tr>
-          <td>2017- 2018</td>
-          <td>Student Software Engineer</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>Embedded Software</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Web Development</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️</td>
-      </tr>
-    </table>
-    <hr>
-    <a href="contact-me.html">Contact Me</a>
-  </body>
+    <div class="contact-me">
+
+      <h2>Get In Touch</h2>
+      <h3>If you would like to know more</h3>
+      <p class="contact-message">Please connect with me on LinkedIn</p>
+      <a class="btn" href="https://www.linkedin.com/in/sayf-khan/">LinkedIn</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <p class="copyright">© 2020 Sayf Khan</p>
+  </div>
+</body>
+
 </html>
